# corecursive-type-class

./: README.md  todo.txt
asl/: asl.cabal  todo.txt
asl/Analyzer/: Interface.hs  LPTM.hs  Loop.hs  Narrowing.hs  PrettyPrint.hs  Stable.hs  Syntax.hs
asl/Lang/: AntiUnify.hs  Eval.hs  Examples.hs  Formulas.hs  Functionalisation.hs  KindInference.hs  Lemma.hs  Monad.hs  PMCompile.hs  Parser.hs  Pattern.hs  PrettyPrint.hs  RTree.hs  Syntax.hs  TypeInference.hs
asl/examples/: abs.asl  bush-class.asl  bush.asl  even.asl  lam.asl  muti.asl  q.asl
asl/executables/: asl.hs
asl/lib/: Stable.hs  Syntax.hs
asl/lib/analyzer/src/: Interface.hs  LPTM.hs  Loop.hs  Narrowing.hs  PrettyPrint.hs  Syntax.hs
asl/tests/: add.asl  bug.asl  clock.hs  collect.asl  d.asl  data.asl  dlist-new.asl  dlist.asl  eq.asl  gadt.asl  gadt1.asl  gmap.asl  hfix.asl  higher.asl  hughes.asl  list.asl  list1.asl  list2.asl  list3.asl  maybe.asl  monad.asl  monad1.asl  mutual.asl  nat.asl  nested.asl  nested.hs  new.hs  poly.asl  principle.asl  principle.hs  principleII.asl  principleII.hs  principleIII.asl  principleIII.hs  seq.asl  single.asl  test2.asl  tmp.hs  tom.asl
simpLoop/: simpLoop.cabal
simpLoop/Analyzer/: Interface.hs  Narrowing.hs  Syntax.hs
