name:                asl
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.22

library
  exposed-modules:    Lang.Parser, 
                      Lang.Syntax,
                      Lang.PrettyPrint,
                      Lang.Monad,
                      Lang.TypeInference,
                      Lang.Formulas,
                      Lang.Eval,
                      Lang.KindInference,
                      Lang.Functionalisation
                      -- Lang.Pattern
  -- other-modules:       
  build-depends: base >= 4, parsec >= 3.0, array, indents >= 0.3.0, pretty, mtl >= 2.2.1, containers, transformers >= 0.4.1.0, cmdargs, parallel >= 3.2.0.4   

  --Werror
Executable asl
  Main-is: asl.hs
  Build-depends: base, cmdargs, pretty, mtl, array, containers, asl, parsec, parallel, transformers
  Hs-source-dirs: executables
--  Extensions: DeriveDataTypeable